--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "angular-ui-bootstrap": "^2.2.0",
     "body-parser": "1.13.1",
+    "bootstrap": "^3.3.7",
     "express": "4.13.0",
     "sprintf-js": "^1.0.3"
   }
