--- a/package.json
+++ b/package.json
@@ -20,5 +20,15 @@
     "jquery": "^2.2.4",
     "lodash": "^4.16.5",
     "sprintf-js": "^1.0.3"
-  }
+  },
+  "devDependencies": {
+    "gulp": "^3.8.11",
+    "gulp-compass": "^2.0.3",
+    "gulp-concat": "^2.5.2",
+    "gulp-jshint": "^1.9.2",
+    "gulp-sourcemaps": "^1.3.0",
+    "gulp-uglify": "^1.1.0",
+    "gulp-util": "^3.0.4",
+    "jshint-stylish": "^1.0.1"
+  }  
 }
