--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.5.8",
+    "angular-route": "^1.5.8",
     "angular-ui-bootstrap": "^2.2.0",
     "body-parser": "1.13.1",
     "bootstrap": "^3.3.7",
@@ -30,5 +31,5 @@
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.4",
     "jshint-stylish": "^1.0.1"
-  }  
+  }
 }
